--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -19,6 +19,13 @@ body{
   margin-bottom: 2%;
 }
 
+.searchform-one__hidden-button{
+  position: absolute;
+  right: 0;
+  opacity: 0;
+  height: 62%;
+}
+
 .has-search .form-control-feedback {
   font-size: 1.5em;
   top: 12%;
@@ -62,4 +69,8 @@ input[type=file].form-control{
 
 label{
   color: #000
+}
+
+.table th, .table td {
+    padding: 0.2rem 0.3rem;
 }
