--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -26,9 +26,18 @@ body{
 
 .searchform-one__hidden-button{
   position: absolute;
-  right: 0;
-  opacity: 0;
-  height: 62%;
+  right: 10px;
+  /* opacity: 0; */
+  height: 40px;
+  width: 40px;
+  border: none;
+  background-color: #3490dc;
+  color: #fff;
+  border-radius: 50%;
+}
+
+.searchform-one__hidden-button:hover{
+  background-color: #000;
 }
 
 .has-search .form-control-feedback {
@@ -141,18 +150,26 @@ label{
 }
 
 .navigation-clean{
+  height: 60px;
+  padding-top: 0;
+  padding-bottom: 0;
   background-color: #1fa9f0
 }
 
 .navigation-clean.navbar-light .navbar-nav .nav-link {
   color: #fff;
+  border: 2px solid transparent; 
 }
 
-.navigation-clean.navbar-light .navbar-nav .nav-link:hover {
+.navigation-clean.navbar-light .navbar-nav .nav-link:focus, .navigation-clean.navbar-light .navbar-nav .nav-link:hover {
   color: #f4f4f4 !important;
+  background-color: #1c98d8;
+  border-radius: 5px;
 }
 
-.navbar-light .navbar-brand {
+.navbar-light .navbar-brand,
+.navbar-light .navbar-brand:focus
+{
   font-family: Dosis;
   font-weight: bold;
   color: #fff;
@@ -161,4 +178,13 @@ label{
 
 .navbar-light .navbar-brand:hover {
   color: #f4f4f4;
+}
+
+.table-bordered thead th, .table-bordered thead td {
+  font-family: Dosis;
+  color: #276aa2;
+}
+
+button:focus {
+  outline: none;
 }
