--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -31,13 +31,18 @@ body{
   height: 40px;
   width: 40px;
   border: none;
-  background-color: #3490dc;
-  color: #fff;
+  /* background-color: #3490dc; */
+  /* color: #fff; */
   border-radius: 50%;
+  margin-top: -2px;
 }
 
 .searchform-one__hidden-button:hover{
-  background-color: #000;
+  background-color: #f4f4f4;
+}
+
+#search-contract__icon--search{
+  transform: rotate(90deg)
 }
 
 .has-search .form-control-feedback {
@@ -152,15 +157,16 @@ label{
 }
 
 .navigation-clean{
-  height: 60px;
+  /* height: 60px;
   padding-top: 0;
-  padding-bottom: 0;
+  padding-bottom: 0; */
   background-color: #1fa9f0
 }
 
 .navigation-clean.navbar-light .navbar-nav .nav-link {
   color: #fff;
   border: 2px solid transparent; 
+  margin-left: 5px;
 }
 
 .navigation-clean.navbar-light .navbar-nav .nav-link:focus, .navigation-clean.navbar-light .navbar-nav .nav-link:hover {
@@ -190,3 +196,4 @@ label{
 button:focus {
   outline: none;
 }
+
