--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -31,18 +31,24 @@ body{
   height: 40px;
   width: 40px;
   border: none;
-  /* background-color: #3490dc; */
+  background-color: #fff;
   /* color: #fff; */
   border-radius: 50%;
   margin-top: -2px;
+  transition: .2s ease-in-out;
 }
 
 .searchform-one__hidden-button:hover{
   background-color: #f4f4f4;
 }
 
+.searchform-one__hidden-button:hover #search-contract__icon--search{
+  fill: #3490dc;
+}
+
 #search-contract__icon--search{
-  transform: rotate(90deg)
+  transform: rotate(90deg);
+  transition: fill .1s ease-in-out;
 }
 
 .has-search .form-control-feedback {
@@ -81,12 +87,14 @@ input[type=file].form-control{
   color: #fff;
   width: 200px;
   border-radius: 100px;
+  transition: 0.3s ease-in
 }
 
 .pull-right button:hover{
   background-color: #1e6592;
   color: #fff;
-  border-color: #1e6592
+  border-color: #1e6592;
+  box-shadow: 0px 4px 15px 2px rgba(0,0,0,0.3)
 }
 
 label{
@@ -195,5 +203,13 @@ label{
 
 button:focus {
   outline: none;
+}
+
+.react-datepicker-wrapper{
+  display: block !important
+}
+
+.form-group.files label{
+  color: #155c98
 }
 
