--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -221,3 +221,45 @@ button:focus {
   max-width: 80% !important
 }
 
+.date-contract{
+  display: flex;
+  margin-bottom: 25px;
+}
+
+.date-contract > *{
+  box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 15px;
+  margin-right: 10px;
+}
+
+.date-contract p {
+  margin: 0;
+}
+
+.upper{
+  text-transform: uppercase
+}
+
+.btn--modal{
+  margin-top: 20px;
+  /* background-color: #3490dc;
+  color: #fff;
+  width: 200px;
+  border-radius: 100px; */
+}
+
+/* .btn--modal:focus{
+  box-shadow: none
+}
+
+.btn--modal:hover{
+  background-color: #1e6592;
+  color: #fff;
+  box-shadow: 0px 4px 15px 2px rgba(0,0,0,0.3)
+} */
+
+.primary-text{
+  color:#3490dc
+}
+
