--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -263,3 +263,14 @@ button:focus {
   color:#3490dc
 }
 
+.loading{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  height: 100%;
+  width:100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 100000;
+}
+
