Adjust css list party

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -111,7 +111,9 @@ label{
   grid-auto-rows: 70px;
 } */
 
-.list-contract__party{
+.list-contract__party,
+.list-contracts__associated
+{
   /* display: flex;
   align-items: center;
   justify-content: center; */
@@ -280,5 +282,19 @@ button:focus {
 
 .pointer{
   cursor: pointer
+}
+
+.listed-party__label h5 {
+  color: #3490dc;
+  font-size: 16px;
+}
+
+.listed-party__cpf,
+.listed-party__mail,
+.listed-party__phone{
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
+  margin-bottom: 20px;
 }
 
