--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -261,6 +261,22 @@ button:focus {
   box-shadow: 0px 4px 15px 2px rgba(0,0,0,0.3)
 } */
 
+.listener-modal-contract{
+  font-weight: bold;
+  color: #000;
+  margin: 0;
+  margin-bottom: 10px;
+  transition: 0.5s;
+  text-transform: uppercase;
+  display: inline-flex;
+  font-size: 13px
+}
+
+.listener-modal-contract:hover{
+  cursor: pointer;
+  color: #3490dc
+}
+
 .primary-text{
   color:#3490dc
 }
@@ -296,5 +312,9 @@ button:focus {
   border-radius: 5px;
   box-shadow: 0 0 1px 1px rgba(0,0,0,0.2);
   margin-bottom: 20px;
+}
+
+.btn-info:focus, .btn-info.focus{
+  box-shadow: none
 }
 
